docs/am/4.0/guides/identity-providers/social-identity-providers/salesforce.md
---
description: Overview of Salesforce.
---

# Salesforce

## Overview

You can authenticate users in AM with Salesforce. Before you begin, you need to sign up for a [Salesforce account](https://www.salesforce.com/).

## Steps

To connect your application to Salesforce, you will:

* Register a new application in Salesforce
* Create a Salesforce identity provider in AM
* Test the connection

## Register a new application in Salesforce

1. Log in to your [Salesforce account](https://www.salesforce.com/) and create a Connected App, as described in the [Salesforce documentation](https://help.salesforce.com/articleView?id=connected_app_create.htm\&type=0).
2. Give your application a **name**, an **API name** and a **contact email**.
3. Click **Enable OAuth Settings**.
4. Enter `http(s)://AM_GW_HOST/YOUR_DOMAIN/login/callback` for the **callback url**.
5. Select the `Access basic information (id, profile, email, address, phone)` **OAuth scope**.
6. Click **Save**.

{% hint style="info" %}
Salesforce will generate a Consumer Key and Consumer Secret for your application. Make a note of them for later use.
{% endhint %}

## Create a Salesforce identity provider

1. Log in to AM Console.
2. If you want to change to a different security domain, select it from the user menu at the top right.
3. Click **Settings > Providers**.
4. Click the plus icon ![plus icon](https://docs.gravitee.io/images/icons/plus-icon.png).
5. Select **Salesforce** as your identity provider type and click **Next**.

{% hint style="info" %}
Ensure you have the Consumer Key and Consumer Secret generated by Salesforce to hand.
{% endhint %}

6. Give your identity provider a name.
7. Enter your Salesforce Consumer Key and Consumer Secret.
8.  Click **Create**.

    <figure><img src="https://docs.gravitee.io/images/am/current/graviteeio-am-userguide-social-idp-salesforce.png" alt=""><figcaption><p>Create Salesforce IdP</p></figcaption></figure>

{% hint style="info" %}
If you have incorrectly set up the Salesforce app’s callback URL, copy the URL in **1. Configure the Redirect URI** to the right of the page and update your Salesforce application settings.
{% endhint %}

## Test the connection

You can test your Salesforce connection using a web application created in AM.

1.  In AM Console, click **Applications** and select your social identity provider.

    <figure><img src="https://docs.gravitee.io/images/am/current/graviteeio-am-userguide-social-idp-list.png" alt=""><figcaption><p>Select Salesforce IdP</p></figcaption></figure>
2.  Call the Login page (the `/oauth/authorize` endpoint). If the connection is working you will see a **Sign in with** button.

    If the button is not visible, there may be a problem with the identity provider settings. Check the AM Gateway log for more information.

    <figure><img src="https://docs.gravitee.io/images/am/current/graviteeio-am-userguide-social-idp-login.png" alt=""><figcaption><p>Sign in options</p></figcaption></figure>
